NIFI-15341: Prototype of post-sync controller service resolution